Revert "Fixed sidebar z-index and navbar position."
This reverts commit 1f4cef2cdd916da7be481fbe52792c2d5e3a2df5.

--- a/src/app/components/Sidebar/components/container.css
+++ b/src/app/components/Sidebar/components/container.css
@@ -8,7 +8,7 @@
   display: block;
   background-color: #fff;
   border-right: 1px solid #ddd;
-  z-index: 15;
+  z-index: 1035;
   transition: left 250ms;
   overflow-x: hidden;
   overflow-y: auto;
