--- a/src/app/components/Sidebar/sidebar.css
+++ b/src/app/components/Sidebar/sidebar.css
@@ -11,6 +11,6 @@
 @media (min-width: 768px) {
   .sidebarHead {
     position: fixed;
-    z-index: 15;
+    z-index: 1038;
   }
 }
